--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,54 +1,65 @@
 .button {
-  &:hover,
-  &:focus {
-    outline: none;
-  }
 
-  /* Base style */
-  @apply px-4 py-2 text-baseText bg-baseBackground rounded-md border-[1px] border-baseBorder hover:border-primary hover:text-primary;
-
-  /* Default button */
-  &.btn-default {
-    @apply text-baseText bg-baseBackground border-baseBorder;
-
-    &:hover {
-      @apply text-primary border-primary;
+    &:hover,
+    &:focus {
+        outline: none;
     }
-  }
 
-  /* Primary button */
-  &.btn-primary {
-    @apply text-white bg-primary border-transparent;
+    /* Base style */
+    @apply px-4 py-2 text-baseText bg-baseBackground rounded-md border-[1px] border-baseBorder hover:border-primary hover:text-primary;
 
-    &:hover {
-      @apply bg-hoverPrimary;
+    /* Default button */
+    &.btn-default {
+        @apply text-baseText bg-baseBackground border-baseBorder;
+
+        &:hover {
+            @apply text-primary border-primary;
+        }
     }
-  }
 
-  /* Dashed button */
-  &.btn-dashed {
-    @apply text-baseText bg-baseBackground border-dashed border-baseBorder;
+    /* Primary button */
+    &.btn-primary {
+        @apply text-white bg-primary border-transparent;
 
-    &:hover {
-      @apply text-primary border-primary;
+        &:hover {
+            @apply bg-hoverPrimary;
+        }
     }
-  }
 
-  /* Link button */
-  &.btn-link {
-    @apply text-primary bg-transparent border-none;
+    /* Dashed button */
+    &.btn-dashed {
+        @apply text-baseText bg-baseBackground border-dashed border-baseBorder;
 
-    &:hover {
-      @apply text-hoverPrimary;
+        &:hover {
+            @apply text-primary border-primary;
+        }
     }
-  }
 
-  /* Text button */
-  &.btn-text {
-    @apply text-baseText bg-transparent border-none;
+    /* Link button */
+    &.btn-link {
+        @apply text-primary bg-transparent border-none;
 
-    &:hover {
-      @apply bg-baseBackgroundTextButton;
+        &:hover {
+            @apply text-hoverPrimary;
+        }
     }
-  }
+
+    /* Text button */
+    &.btn-text {
+        @apply text-baseText bg-transparent border-none;
+
+        &:hover {
+            @apply bg-baseBackgroundTextButton;
+        }
+    }
+}
+
+[data-theme='dark'] .button {
+    &.btn-text {
+        @apply text-baseText bg-baseBackground border-none;
+
+        &:hover {
+            @apply bg-baseBackgroundTextButtonHoverDarkTheme;
+        }
+    }
 }
